Development - initial development

--- a/www/public/index.html
+++ b/www/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Chris Nasr</title>
+		<title>Chris Nasr - Curriculum Vitae</title>
 
 		<!-- Links -->
 		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -12,8 +12,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
-		<meta name="title" content="Chris Nasr">
-		<meta name="description" content="Curriculum vitae / Portfolio">
+		<meta name="title" content="Chris Nasr - Curriculum Vitae">
+		<meta name="description" content="Curriculum vitae / portfolio for Chris Nasr">
 
 	</head>
 	<body>
